css<>fixed the z-index of mobile nav

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -121,7 +121,7 @@ em{
     right: 0;
     background-color: #ffd900af;
     align-items: center;
-    
+    z-index: 1000;
     padding: 1em;
     box-shadow: 0 0 5px;
    
